[project]
name = "postforge"
version = "0.1.0"
description = "Instagram analytics & optimization tool powered by the Meta Graph API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.35",
    "pandas>=2.2",
    "numpy>=1.26",
    "plotly>=5.22",
    "requests>=2.32",
    "vaderSentiment>=3.3",
    "scikit-learn>=1.5",
    "Pillow>=10.3",
    "reportlab>=4.2",
    "python-dotenv>=1.0",
    "wordcloud>=1.9",
    "matplotlib>=3.9",
    "instagrapi>=2.10.5",
]

[tool.uv]
package = false
